CHANGES IN VERSION 1.15.1-1.15.2
-------------------------

UTILITIES

    o a new storage name 'single' in `add.gdsn()` for single-precision
      floating numbers

    o improve the efficiency of bit2-unpacking when there are lots of zero


CHANGES IN VERSION 1.14.0-1.14.1
-------------------------

UTILITIES

    o tweak error messages in `apply.gdsn()`

    o `cleanup.gds()` allows a file name with a prefix '~' which will be
      automatically replaced by the home directory


CHANGES IN VERSION 1.12.0
-------------------------

UTILITIES

    o update liblzma to v5.2.3

    o update lz4 to v1.7.5

    o a new citation


CHANGES IN VERSION 1.10.1
-------------------------

NEW FEATURES

    o new data types (variable-length encoding of signed and unsigned integers)


CHANGES IN VERSION 1.10.0
-------------------------

    o the version number was bumped for the Bioconductor release version 3.4


CHANGES IN VERSION 1.8.0-1.8.4
-------------------------

    o the version number was bumped for the Bioconductor release version 3.3

NEW FEATURES

    o define C MACRO 'COREARRAY_ATTR_PACKED' and 'COREARRAY_SIMD_ATTR_ALIGN'
      in CoreDEF.h

    o SIMD optimization for 1-bit and 2-bit array encode/decode (e.g., decode,
      RAW output: +20% for 2-bit, +50% for 1-bit)


CHANGES IN VERSION 1.7.18-1.7.22
-------------------------

NEW FEATURES

    o LZMA compression algorithm is available in the GDS system (LZMA, LZMA_RA)

    o faster implementation of variable-length string: the default string
      becomes string with the length stored in the file instead of
      null-terminated string (new GDS data types: dStr8, dStr16 and dStr32)

UTILITIES

    o improve the read speed of characters (+18%)

    o significantly improve random access of characters

    o correctly interpret factor variable in `digest.gdsn()` when
      `digest.gdsn(..., action="Robject")`, since factors are not integers


CHANGES IN VERSION 1.7.0-1.7.17
-------------------------

NEW FEATURES
