@@ -2,7 +2,7 @@ Package: gdsfmt
 Type: Package
 Title: R Interface to CoreArray Genomic Data Structure (GDS) Files
 Version: 1.15.2
-Date: 2017-12-15
+Date: 2018-04-10
 Depends: R (>= 2.15.0), methods
 Suggests: parallel, digest, crayon, RUnit, knitr, BiocGenerics
 Author: Xiuwen Zheng [aut, cre], Stephanie Gogarten [ctb], Jean-loup
